tests/baselines/reference/genericLambaArgWithoutTypeArguments.errors.txt
tests/cases/compiler/genericLambaArgWithoutTypeArguments.ts(4,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/genericLambaArgWithoutTypeArguments.ts(4,14): error TS7006: Parameter 'a' implicitly has an 'any' type.
tests/cases/compiler/genericLambaArgWithoutTypeArguments.ts(7,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericLambaArgWithoutTypeArguments.ts (3 errors) ====
    interface Foo<T> {
       x: T;
    }
    function foo(a) {
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                 ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
       return null;
    }
    foo((arg: Foo) => { return arg.x; });
              ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    